<resources>
    <string name="app_name">vand</string>
    <!--快捷菜单-->
    <string name="home_cloud_mining">云挖矿</string>
    <string name="home_financial_management">理财</string>
    <string name="home_customer_service">客服</string>
    <string name="home_one_buy">1U夺币</string>
    <string name="home_campfire_plan">篝火计划</string>
    <string name="home_recommended_award">推荐有奖</string>
    <string name="home_weekly_race">周周赛</string>
    <string name="home_activity_center">活动中心</string>
    <string name="home_coin_news">币币快讯</string>

    <string name="contract_open_a_contract_account">去开通合约账户?</string>
    <string name="switch_language">切换语言</string>
    <string name="lang_auto">自动</string>
    <string name="lang_zh">中文</string>
    <string name="lang_ft">繁体</string>
    <string name="lang_en">英文</string>
    <string name="lang_ko">韩文</string>
    <string name="confirm">确定</string>
    <string name="widgets">控件展示</string>
</resources>