<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_lang_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rb_lang_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_auto"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/rb_lang_zh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_zh"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/rb_lang_ft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_ft"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/rb_lang_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_en"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/rb_lang_ko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_ko"
            android:textColor="@android:color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_lang_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/confirm" />

</LinearLayout>